# 100GB

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc  naive.cc
src/include/: common.h  hash_func.h  partition.h  words_reader.h  words_writer.h
test/: test_partition.cc  test_words_reader.cc  test_words_writer.cc  utils.h
tools/: gen_large_data.py  stat.py  unordered_map.cc
